--- a/2-2/index.html
+++ b/2-2/index.html
@@ -1,1 +1,38 @@
 <!-- この下に記載 -->
+<!DOCTYPE html>
+<html lang="ja">
+
+<head>
+	<meta charset="UTF-8"/>
+	<title>css-test2-2</title>
+	<link rel="stylesheet" href="style.css"/>
+</head>
+<body>
+    <div class="sample-grid">
+	    <header>
+		    <h3>サイトタイトル</h3>
+		    <a href="#">Home</a>
+		    <a href="#">About</a>
+		    <a href="#">Contact</a>
+	    </header>
+        <div class="side">
+            <h4>サイドバー</h4>
+            <ul>
+                <li><a href="#">リンク1</a></li>
+                <li><a href="#">リンク2</a></li>
+                <li><a href="#">リンク3</a></li>
+            </ul>       
+        </div>
+        <div class="main">
+            <h2>メインコンテンツ</h2>
+            <p>-------------------本文1-------------------</p>
+            <p>-------------------本文2-------------------</p>
+            <p>-------------------本文3-------------------</p>
+            <p>-------------------本文4-------------------</p>
+        </div>
+   
+        <footer>©2025 soichi shimizu</footer>
+    </div>
+</body>
+
+</html>
