--- a/2-3/index.html
+++ b/2-3/index.html
@@ -1,1 +1,40 @@
 <!-- この下に記載 -->
+<!DOCTYPE html>
+<html lang="ja">
+
+<head>
+	<meta charset="UTF-8"/>
+	<title>css-test2-3</title>
+	<link rel="stylesheet" href="style.css"/>
+</head>
+
+<body>
+	<div class="cards">
+		<div class="card">
+			<h3>カード1</h3>
+			<p>grid指定で最小幅を設定</p>
+		</div>
+		<div class="card">
+			<h3>カード2</h3>
+			<p>最小幅を250pxとする</p>
+		</div>
+		<div class="card">
+			<h3>カード3</h3>
+			<p>最小幅を下回ったら折り返し</p>
+		</div>
+		<div class="card">
+			<h3>カード4</h3>
+			<p>gapで等間隔に設定</p>
+		</div>
+		<div class="card">
+			<h3>カード5</h3>
+			<p>本文</p>
+		</div>
+		<div class="card">
+			<h3>カード6</h3>
+			<p>本文</p>
+		</div>
+	</div>
+</body>
+
+</html>
