テストの答え：セクション２CSSの問題を解く(修正2回目）

--- a/2-3/index.html
+++ b/2-3/index.html
@@ -12,15 +12,15 @@
 	<div class="cards">
 		<div class="card">
 			<h3>カード1</h3>
-			<p>grid指定で最小幅を設定</p>
+			<p>gridで設定</p>
 		</div>
 		<div class="card">
 			<h3>カード2</h3>
-			<p>最小幅を250pxとする</p>
+			<p>画面幅1000px以下の場合は3列になるように指定</p>
 		</div>
 		<div class="card">
 			<h3>カード3</h3>
-			<p>最小幅を下回ったら折り返し</p>
+			<p>画面幅500pxの場合は1列になるように指定</p>
 		</div>
 		<div class="card">
 			<h3>カード4</h3>
